--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -19,6 +19,10 @@ dependencies {
     implementation "com.android.support:cardview-v7:$androidSupportVersion"
     implementation "com.android.support:design:$androidSupportVersion"
     implementation "com.android.support:palette-v7:$androidSupportVersion"
+
     implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
+
     implementation files('libs/volley.jar')
 }
