add land spec for detail screen

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
         androidSupportVersion = "27.1.1"
         okHttpVersion = "3.10.0"
         glideVersion = "4.6.1"
+        kenburnsviewVersion ="1.0.7"
     }
 }
 
