--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -24,5 +24,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
+    implementation "com.flaviofaria:kenburnsview:$kenburnsviewVersion"
+
     implementation files('libs/volley.jar')
 }
